--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,6 @@ jobs:
           node-version: 10
       - run: yarn
       - run: yarn build
-      - run: npm publish
+      - run: tsc && cp package.json dist && cp Readme.md dist && cd dist && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
