--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,10 +9,11 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 10
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
       - run: yarn
       - run: yarn build
       - run: cp package.json dist && cp Readme.md dist
