--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "isolatedModules": false,
         "declaration": true,
         "resolveJsonModule": true,
+        "noImplicitAny": false,
         // "moduleResolution": "node",
         "sourceMap": false,
         // "baseUrl": "./",
