--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/Edurata/edurata-sdk#readme",
   "dependencies": {
-    "@types/node": "^17.0.31"
+    "@aws-sdk/client-cloudwatch-logs": "^3.121.0",
+    "@types/node": "^17.0.31",
+    "winston": "^3.8.1",
+    "winston-cloudwatch": "^6.0.1"
   }
 }
