--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@edurata/sdk",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "rm -rf dist && tsc"
   },
